complete the banner section

--- a/html-test/index.html
+++ b/html-test/index.html
@@ -48,6 +48,31 @@
     </header>
     <!-- Header End -->
 
+    <!-- Hero Section start -->
+
+    <section class="hero">
+      <div class="container">
+        <div class="hero__description">
+          <div class="blank"></div>
+          <div class="description">
+            <p class="tool__tip">JEWELRY</p>
+            <h3 class="title">
+              Popular Jewelry design combined with heartfelt messages
+            </h3>
+            <p class="sub__title">Gift they will love-guaranteed!</p>
+            <div class="banner__button__wrapper">
+              <button class="button__container">Buy Now</button>
+              <button class="button__container border__button">
+                More Details
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Hero Section end -->
+
     <script src="./script.js"></script>
   </body>
 </html>
