complete the html test

--- a/html-test/index.html
+++ b/html-test/index.html
@@ -73,6 +73,11 @@
 
     <!-- Hero Section end -->
 
+    <!-- Product section start -->
+    <section id="productSection" class="container">
+      <h2 class="section__title">Product Section</h2>
+    </section>
+
     <script src="./script.js"></script>
   </body>
 </html>
